force-app/main/default/objects/bpats__ATS_Action__c/bpats__ATS_Action__c.object-meta.xml
<CustomObject>
    <description>Action in the ATS that will be taken once an applicant reaches a defined stage in the ATS</description>
    <label>ATS Action</label>
    <nameField>
        <label>ATS Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>