force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Applicant_Reference__c.field-meta.xml
<CustomField>
    <fullName>bpats__Applicant_Reference__c</fullName>
    <inlineHelpText>Specify the API Name of the field that holds the ATS Applicant Relationship (Master-Detail or Lookup) from the Object specified in Object Name Field.  Entering the field&apos;s API Name here will pre-populate the data in this field when using the Create a Record action.</inlineHelpText>
    <label>Applicant Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>