force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__ATS_Actions_External_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Actions_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>ATS Actions External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>