force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Attach_Resume__c.field-meta.xml
<CustomField>
    <fullName>bpats__Attach_Resume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach Resume</label>
    <type>Checkbox</type>
</CustomField>