force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Cc_Field_ApiName_Reference__c.field-meta.xml
<CustomField>
    <fullName>bpats__Cc_Field_ApiName_Reference__c</fullName>
    <inlineHelpText>Provide an email address, or the API Name of an Email field or a Lookup field of type User, Contact, or Lead on the Job Object, whose value you want to pre-populate when this action is called.  Multiple individuals can be entered, separated by a comma (with no spaces).</inlineHelpText>
    <label>“Cc” Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>