force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Component_Name__c</fullName>
    <inlineHelpText>The API Name of the component for Quick Action will be &apos;componentName&apos; and for Lightning Web Component it will be &apos;namespace/componentName&apos;</inlineHelpText>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>