force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Custom_Events_Present__c.field-meta.xml
<CustomField>
    <fullName>bpats__Custom_Events_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox when atscancel and atscomplete events are dispatched from the mentioned component</inlineHelpText>
    <label>Custom Events Present</label>
    <type>Checkbox</type>
</CustomField>