force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Email_Template__c</fullName>
    <inlineHelpText>Provide the API Name of the Email Template on Action Type = &apos;Send Email&apos;.</inlineHelpText>
    <label>Message Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>