force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Email_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Email_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>