force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Flow_Name__c</fullName>
    <inlineHelpText>Provide the API Name of the Flow on Action Type = &apos;Flow&apos;.</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>