force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Include_User_Signature__c.field-meta.xml
<CustomField>
    <fullName>bpats__Include_User_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include User Signature</label>
    <type>Checkbox</type>
</CustomField>