force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>