force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__LWC_Attributes__c.field-meta.xml
<CustomField>
    <fullName>bpats__LWC_Attributes__c</fullName>
    <label>LWC Attributes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>