force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Object_Name__c</fullName>
    <inlineHelpText>Provide the API Name of the Object on Action Type = &apos;Create a Record&apos; &amp; &apos;Quick Action&apos;.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>