force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Pass_RecordId_As_Collection__c.field-meta.xml
<CustomField>
    <fullName>bpats__Pass_RecordId_As_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if the flow takes recordId as collection input for Action Type = &apos;Flow&apos;.</inlineHelpText>
    <label>Pass RecordId As Collection</label>
    <type>Checkbox</type>
</CustomField>