force-app/main/default/objects/bpats__ATS_Action__c/fields/bpats__Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Type__c</fullName>
    <label>Action Definition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create a Record</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>QuickAction</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Lightning Component</fullName>
                <isActive>false</isActive>
                <label>Lightning Component</label>
            </value>
            <value>
                <fullName>Modal</fullName>
                <isActive>false</isActive>
                <label>Modal</label>
            </value>
            <value>
                <fullName>Update a Record</fullName>
                <isActive>false</isActive>
                <label>Update a Record</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>