force-app/main/default/objects/bpats__ATS_Action__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__Type__c</columns>
    <columns>bpats__Object_Name__c</columns>
    <columns>bpats__Component_Name__c</columns>
    <columns>bpats__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>